syntax = "proto3";

option java_multiple_files = true;
package com.vinci.flashsale.order.dto;

message OrderCreateRequest {
  string user_id = 1;
  int32 money = 2;
  string commodity_code = 3;
  int32 count = 4;
}